# pdf-tile-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pdf_tile_generator.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPER.md  INSTALL.md  PACKAGING.md  TROUBLESHOOTING.md
pdf_tile_generator/: __init__.py  __main__.py
pdf_tile_generator/app/: __init__.py  main.py
pdf_tile_generator/captions/: __init__.py  caption_generator.py  csv_io.py
pdf_tile_generator/gui/: __init__.py  dialogs.py  image_list.py  main_window.py  preview.py  settings_panel.py  workers.py
pdf_tile_generator/images/: __init__.py  loader.py  thumbnail.py
pdf_tile_generator/models/: __init__.py  settings.py
pdf_tile_generator/pdf/: __init__.py  generator.py  layout.py
pdf_tile_generator/update/: __init__.py  checker.py  velopack_update.py
scripts/: build.ps1  build.sh  make_examples.py
tests/: conftest.py  test_captions.py  test_extra_fields.py  test_images.py  test_layout.py  test_new_features.py  test_pdf_generator.py  test_settings.py  test_update.py  test_velopack_update.py
