[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-tile-generator"
version = "1.2.0"
description = "Desktop application that generates printable PDF contact sheets: image tiles with captions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PDF Tile Generator contributors" }]
dependencies = [
    "PySide6>=6.6",
    "reportlab>=4.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
    "pyinstaller>=6.0",
]

[project.gui-scripts]
pdf-tile-generator = "pdf_tile_generator.app.main:main"

[tool.setuptools.packages.find]
include = ["pdf_tile_generator*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
# N802: Qt override method names (dragEnterEvent, etc.)
# N818: PDFGenerationCancelled is a control-flow signal, not an error
ignore = ["N802", "N818"]

[tool.ruff.lint.per-file-ignores]
# Qt signals are camelCase by convention
"pdf_tile_generator/gui/*" = ["N815"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
